# highbrow

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
resources/packaging/linux/: highbrow.desktop
resources/packaging/linux/graphics/: generate-icons.sh
src/: config.rs  launch_with_url.rs  main.rs  setup_ui.rs
src/ui/: browser_selector_ui.rs  mod.rs  setup_window_ui.rs  styling.rs
src/utils/: dialog.rs  keyboard.rs  launcher.rs  mod.rs
